# mlproject

./: .gitignore  pyproject.toml  setup.py
artifacts/: model.pkl  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlproject.egg-info/: PKG-INFO
notebook/: EDA STUDENT PERFORMANCE.ipynb  MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/mlproject.egg-info/: PKG-INFO
